# GarbageClassifier

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CocoMap.cpp  CocoMap.h  Detector.cpp  Detector.h  MainWindow.cpp  MainWindow.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
